2006-03-04 01:28  pnasrat

	* createrepo.spec: release

2006-02-21 18:30  pnasrat

	* Makefile, createrepo.spec, genpkgmetadata.py, docs/createrepo.8:
	  Documentation and version updates

2006-02-21 15:10  pnasrat

	* dumpMetadata.py, genpkgmetadata.py: Enable seperate outputdir
	  (dgregor)

2006-02-17 21:22  lmacken

	* genpkgmetadata.py, docs/createrepo.8: Add support for -U
	  (--update-info-location) flag to query a specified server for
	  package update metadata.  The metadata will currently be stored
	  in 'repodata/update-info' and each package in the primary.xml
	  will have an <update id="FEDORA-XXXX-XX"
	  location="update-info/pkg-ver-rel.xml"/> tag which points to it's
	  corresponding update information.

2006-01-13 01:24  skvidal

	* dumpMetadata.py, genpkgmetadata.py:
	  apply two patches from dgregor@redhat.com - verifies that the
	  checksum cache file is more recent than the corresponding rpm -
	  move around cmds dict initialization to make it more consistent.

2005-12-08 14:25  pnasrat

	* genpkgmetadata.py: Fix cachedir/groupfile handling with --basedir
	  and using paths not relative to cwd when run without --basedir.

2005-12-08 14:24  pnasrat

	* genpkgmetadata.py: Support --split option to label media with
	  urls across directories.

2005-12-08 14:22  pnasrat

	* genpkgmetadata.py: Split out processing into smaller methods.
	  Make ts internal.  Files and base/file/other data attributes.

2005-12-08 14:21  pnasrat

	* genpkgmetadata.py: Cleanup of generator class to use cmds
	  internally as an attribute.

2005-12-08 14:19  pnasrat

	* genpkgmetadata.py: Initial work to form metadata generator class.

2005-11-27 18:01  skvidal

	* dumpMetadata.py: speed up by caching file mode lookup by Dennis
	  Gregorovic

2005-11-11 16:03  pnasrat

	* dumpMetadata.py, genpkgmetadata.py: Enable basedir to be used -
	  dgregor

2005-11-02 15:23  skvidal

	* dumpMetadata.py, genpkgmetadata.py: