@@ -36,9 +36,6 @@ change out of all packages this decreases the processing time dramatically.
 Run in split media mode. Rather than pass a single directory, take a set of
 directories corresponding to different volumes in a media set.
 .br
-.IP "\fB\-U --update-info-location\fP <url>"
-Query a specified server for package update metadata.
-.br
 .IP "\fB\-p --pretty\fP"
 Output xml files in pretty format.
 .IP "\fB\-V --version\fP"
