@@ -1,3 +1,9 @@
+2006-06-15 10:41  lmacken
+
+	* genpkgmetadata.py, docs/createrepo.8:
+	  Revert --update-info-location patch, since yum now supports arbitrary
+	  metadata via YumRepository::retrieveMD()
+
 2006-03-04 01:28  pnasrat
 
 	* createrepo.spec: release
